feat(core): add warning when a Flow trigger has no condition
closes #3395